--- a/dashboards/server_monitor.erb
+++ b/dashboards/server_monitor.erb
@@ -22,15 +22,15 @@ $(function() {
     </li>
 
     <li data-row="1" data-col="1" data-sizex="2" data-sizey="1">
-      <div data-id="welcome" data-view="Text" data-title="Welcome!!!" data-text="This is our lab's outlet server temperature 1080p dashboard." data-moreinfo="Protip: You can drag the widgets around!"></div>
+      <div data-id="welcome" data-view="Text" data-title="Welcome!!!" data-text="This is our lab's outlet server temperature dashboard." data-moreinfo="Protip: You can drag the widgets around!"></div>
     </li>
 
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="temperature_spark" data-view="Meter" data-title="tempeature" data-min="0" data-max="100"></div>
+      <div data-id="temperature" data-view="Meter" data-title="tempeature" data-min="0" data-max="100"></div>
     </li>
 
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="synergy" data-view="Meter" data-moreinfo="In sync with my neighbour!" data-title="Synergy" data-min="0" data-max="100"></div>
+      <div data-id="wind_velocity" data-view="Meter" data-moreinfo="In sync with my neighbour!" data-title="wind_velocity" data-min="0" data-max="100"></div>
     </li>
 
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="2">
